<resources>
    <string name="app_name">Travel Company</string>
    <string name="preference_file_key">preference</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_flights">Flights</string>
    <string name="title_hotels">Hotels</string>
    <string name="title_guide">Guide</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="user_name">Name</string>
    <string name="user_e_mail">E-mail</string>
    <string name="booked_rooms">Booked rooms</string>
    <string name="number_of_tickets">Number of tickets</string>
    <string name="find_flights">Find flights</string>
    <string name="choose_city_title">Choose the city you want to travel</string>
    <string name="entertainment_link_title">Learn about entertainment in this city</string>
    <string name="find_hotels">Find hotels</string>
    <string name="departure_date">Departure date</string>
    <string name="kids">Kids</string>
    <string name="clear_filters">Clear filters</string>
    <string name="arrival_date">Arrival date</string>
    <string name="hotel_stars">Hotel stars</string>
    <string name="_5_stars">5 stars</string>
    <string name="no_stars">no stars</string>
    <string name="_1_star">1 star</string>
    <string name="_3_stars">3 stars</string>
    <string name="_4_stars">4 stars</string>
    <string name="adults">Adults</string>
    <string name="_2_stars">2 stars</string>
    <string name="step_title">Planning a trip is easy, you just need to follow a few steps:</string>
    <string name="home_text_1">First you need to understand where you want to go</string>
    <string name="home_text_2">if you have already selected a city, please do not skip this step. here you can get acquainted with the sights, entertainment, tourist places and so on</string>
    <string name="go_to_guide_page">Go to Guide page</string>
    <string name="go_to_hotels_page">Go to Hotels page</string>
    <string name="home_text_3">Now you can book a hotel</string>
    <string name="home_text_4">Buy a plane ticket</string>
    <string name="go_to_flights_page">Go to Flights page</string>
</resources>