<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HotelsFragment">

    <LinearLayout
        android:id="@+id/hotel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/hotel_city_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/hotel_arrival_date_text_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/arrival_date"
                android:inputType="date"
                android:paddingTop="15dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/hotel_departure_date_text_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/departure_date"
                android:inputType="date"
                android:paddingTop="15dp"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/star_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:justificationMode="inter_word"
            android:text="@string/hotel_stars"
            android:textColor="#000000"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/star_check_box_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/_1_star"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/star_check_box_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/_2_stars"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/star_check_box_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/_3_stars"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/star_check_box_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/_4_stars"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/star_check_box_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/_5_stars"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/star_check_box_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/no_stars"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adults_number_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/adults"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/adults_number_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="2"
                android:hyphenationFrequency="none"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/kids_number_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kids"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/kids_number_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="0"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/find_hotels_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/find_hotels" />

        <Button
            android:id="@+id/hotel_clear_filters_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/clear_filters" />

        <LinearLayout
            android:id="@+id/hotels_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </LinearLayout>
</ScrollView>