<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AccountFragment">

    <LinearLayout
        android:id="@+id/account_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/account_name_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/account_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingTop="15dp"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/account_email_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/user_e_mail"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/account_email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_e_mail"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />

        <Button
            android:id="@+id/account_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Save" />

        <TextView
            android:id="@+id/chosen_flights_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="Purchased tickets"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/chosen_flights_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:id="@+id/chosen_hotels_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/booked_rooms"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/chosen_hotels_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

    </LinearLayout>
</ScrollView>