<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FlightsFragment">

    <LinearLayout
        android:id="@+id/airport_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/airport_departure_city_spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/airport_arrival_city_spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/airport_departure_date_text_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/departure_date"
                android:inputType="date"
                android:paddingTop="15dp"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/airport_number_of_tickets_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_tickets"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/airport_airport_number_of_tickets_seek_bar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="1" />

        <Button
            android:id="@+id/find_flights_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/find_flights" />

        <Button
            android:id="@+id/airport_clear_filters_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/clear_filters" />

        <LinearLayout
            android:id="@+id/flights_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>
</ScrollView>